@@ -1668,19 +1668,15 @@ void CSQLHelper::UpdateMeter()
 			std::stringstream s_str2( sValue );
 			s_str2 >> MeterValue;
 
-			if (dType==pTypeP1Gas)
+			//if last value == actual value, then do not insert it
+			sprintf(szTmp,"SELECT Value FROM Meter WHERE (DeviceRowID=%llu) ORDER BY ROWID DESC LIMIT 1",ID);
+			result2=query(szTmp);
+			if (result2.size()>0)
 			{
-				//if last value == actual value, then do not insert it
-				//(Update is onces every one/two hours)
-				sprintf(szTmp,"SELECT Value FROM Meter WHERE (DeviceRowID=%llu) ORDER BY ROWID DESC LIMIT 1",ID);
-				result2=query(szTmp);
-				if (result2.size()>0)
-				{
-					std::vector<std::string> sd2=result2[0];
-					std::string sValueLast=sd2[0];
-					if (sValueLast==sValue)
-						continue; //skip same value
-				}
+				std::vector<std::string> sd2=result2[0];
+				std::string sValueLast=sd2[0];
+				if (sValueLast==sValue)
+					continue; //skip same value
 			}
 
 			//insert record
